--- a/explore/Cargo.toml
+++ b/explore/Cargo.toml
@@ -1,4 +1,8 @@
+[package]
+name = "explore"
+version = "0.1.0"
+edition = "2018"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["explore", "basic"]
+[dependencies]
