--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,8 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = ["explore", "basic"]
+members = [
+    "explore",
+    "basic",
+    "geekbang/httpie"
+]
