refactor: rename some directory name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 
 [workspace]
 members = [
+    "the_book",
+    "rust_by_examples",
     "explore",
-    "basic",
-    "geekbang/httpie",
-    "rust-by-examples"
+    "geekbang/httpie"
 ]
